add global sass config

--- a/pgui/src/App.sass
+++ b/pgui/src/App.sass
@@ -1,1 +1,8 @@
+@import "global.sass"
+
 .App
+  *
+
+    transition: background-color width height $transition-duration
+    //transition: width $transition-duration
+    //transition: height $transition-duration
