move collapse border from each div to wrap div

--- a/pgui/src/components/Collapse/index.sass
+++ b/pgui/src/components/Collapse/index.sass
@@ -1,6 +1,6 @@
 .Collapse
-  &>div
-    border: 1px solid #ccc
+  //&>div
+  border: 1px solid #ccc
   .collapse-title
     height: 3rem
     line-height: 3rem
