fix transition property bug

--- a/pgui/src/App.sass
+++ b/pgui/src/App.sass
@@ -2,7 +2,6 @@
 
 .App
   *
-
-    transition: background-color width height $transition-duration
+    transition: background-color $transition-duration
     //transition: width $transition-duration
     //transition: height $transition-duration
