--- a/pgui/src/App.sass
+++ b/pgui/src/App.sass
@@ -5,3 +5,6 @@
     transition: background-color $transition-duration
     //transition: width $transition-duration
     //transition: height $transition-duration
+  .design-area
+    display: grid
+    grid-template-columns: $left-sidebar-width $canvas-width $right-sidebar-width
