add drag layor canvas and make it is top of main canvas

--- a/pgui/src/pages/design/Canvas/index.sass
+++ b/pgui/src/pages/design/Canvas/index.sass
@@ -23,4 +23,6 @@ $test-height: 480px
       //margin: max($test-width, $test-height) / 2
       border: 1px solid #333
       background-color: #fff
+      #canvas
+        position: absolute
 
