update global unit from px to rem

--- a/pgui/src/global.sass
+++ b/pgui/src/global.sass
@@ -1,5 +1,5 @@
 $transition-duration: .25s
 
-$left-sidebar-width: 300px
+$left-sidebar-width: 30rem
 $canvas-width: auto
-$right-sidebar-width: 300px
+$right-sidebar-width: 30rem
