--- a/pgui/src/pages/design/Canvas/index.sass
+++ b/pgui/src/pages/design/Canvas/index.sass
@@ -1,7 +1,7 @@
 @import "global.sass"
 
-$test-width: 800px
-$test-height: 480px
+$test-width: 80rem
+$test-height: 48rem
 
 .Canvas
   //width: $canvas-width
@@ -13,16 +13,27 @@ $test-height: 480px
     min-width: $test-width * 1.5
     min-height: $test-height * 1.5
     //min-width: 100%
-    height: 100%
+    //height: 100%
     display: flex
     justify-content: center
     align-items: center
     .canvas-area
-      min-width: $test-width * 1
-      min-height: $test-height * 1
+      max-width: $test-width
+      max-height: $test-height
       //margin: max($test-width, $test-height) / 2
-      border: 1px solid #333
+      border: 0.1rem solid #333
       background-color: #fff
-      #canvas
-        position: absolute
+      //font:
+      //  size: 16px
+
+      canvas
+        width: $test-width
+        height: $test-height
+        cursor: crosshair
+      #drag
+        position: relative
+        top: - $test-height - 0.4rem
+
+      //#canvas
+        //position: absolute
 
