fixed bug about canvas draw size error

--- a/pgui/src/pages/design/Canvas/index.sass
+++ b/pgui/src/pages/design/Canvas/index.sass
@@ -1,7 +1,7 @@
 @import "global.sass"
 
-$test-width: 80rem
-$test-height: 48rem
+$test-width: 800px
+$test-height: 480px
 
 .Canvas
   //width: $canvas-width
@@ -27,12 +27,13 @@ $test-height: 48rem
       //  size: 16px
 
       canvas
-        width: $test-width
-        height: $test-height
+        //border: none
+        //width: $test-width
+        //height: $test-height
         cursor: crosshair
       #drag
         position: relative
-        top: - $test-height - 0.4rem
+        top: - $test-height - 3px
 
       //#canvas
         //position: absolute
