update collapse sass parameter from hardcode to variable

--- a/pgui/src/components/Collapse/index.sass
+++ b/pgui/src/components/Collapse/index.sass
@@ -1,12 +1,14 @@
+$height: 4rem
+
 .Collapse
   //&>div
   border: 1px solid #ccc
   .collapse-title
-    height: 3rem
-    line-height: 3rem
+    height: $height
+    line-height: $height
     background-color: #ccc
     font:
-      size: 1.4rem
+      size: 1.6rem
       weight: 600
       //size: 12px
     padding: 0 1rem
