--- a/pgui/src/pages/design/LeftSidebar/ControlLibrary/index.sass
+++ b/pgui/src/pages/design/LeftSidebar/ControlLibrary/index.sass
@@ -9,12 +9,13 @@ $border-size: 0.2rem
   line-height: $height
   font:
     size: 1.4rem
-  padding: 0 1rem
+  padding: 0 2rem
+  margin: 0 $border-size
   &:hover
     background-color: #ddd
-    border: $border-size solid #aaa
+    outline: $border-size solid #aaa
 .ControlItem-selected
-  border: $border-size solid #aaa
+  outline: $border-size solid #aaa
   background-color: #ddd
   font:
     weight: 600
