--- a/pgui/src/pages/design/LeftSidebar/ControlLibrary/index.sass
+++ b/pgui/src/pages/design/LeftSidebar/ControlLibrary/index.sass
@@ -10,7 +10,7 @@ $border-size: 0.2rem
   font:
     size: 1.4rem
   padding: 0 2rem
-  margin: 0 $border-size
+  margin: $border-size
   &:hover
     background-color: #ddd
     outline: $border-size solid #aaa
