--- a/pgui/src/index.css
+++ b/pgui/src/index.css
@@ -1,3 +1,11 @@
+html {
+  font-size: 62.5%;
+}
+
+html * {
+  /*font-size: 1.4rem;*/
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
